--- a/grafana/provisioning/datasources/datasource.yml
+++ b/grafana/provisioning/datasources/datasource.yml
@@ -2,11 +2,22 @@ apiVersion: 1
 
 datasources:
   - name: Tempo
+    uid: "123"
     type: tempo
     access: proxy
     orgId: 1
     url: http://tempo:3200
     basicAuth: false
     isDefault: true
+    version: 1
+    editable: true
+
+  - name: Loki
+    type: loki
+    access: proxy
+    orgId: 1
+    url: http://loki:3100
+    basicAuth: false
+    isDefault: false
     version: 1
     editable: true
