--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.8.0",
+    "@opentelemetry/api-logs": "^0.201.1",
     "@opentelemetry/auto-instrumentations-node": "^0.41.1",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.52.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.49.1",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.52.1",
+    "@opentelemetry/resources": "^1.25.1",
+    "@opentelemetry/sdk-logs": "^0.201.1",
+    "@opentelemetry/sdk-metrics": "^1.25.1",
     "@opentelemetry/sdk-node": "^0.49.1",
     "@opentelemetry/semantic-conventions": "^1.34.0",
     "cors": "^2.8.5",
@@ -19,8 +25,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "pg": "^8.11.3",
-    "redis": "^4.6.10",
-    "winston": "^3.11.0"
+    "redis": "^4.6.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
