--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - REDIS_PORT=6379
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
       - OTEL_EXPORTER_OTLP_LOGS_ENDPOINT=http://otel-collector:4318/v1/logs
+      - OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://otel-collector:4318/v1/metrics
       - OTEL_SERVICE_NAME=user-service
     depends_on:
       - postgres
@@ -24,6 +25,7 @@ services:
       - tempo
       - loki
       - otel-collector
+      - prometheus
     networks:
       - app-network
 
@@ -33,6 +35,7 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: user_service
+      POSTGRES_MAX_CONNECTIONS: 100
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
@@ -72,9 +75,22 @@ services:
       - ./otel-collector/otel-collector-config.yaml:/etc/otelcol-contrib/config.yaml
     ports:
       - "4318:4318" # OTLP HTTP
+      - "8889:8889" # Prometheus exporter
     depends_on:
       - tempo
       - loki
+      - prometheus
+    networks:
+      - app-network
+
+  prometheus:
+    image: prom/prometheus:latest
+    command: ["--config.file=/etc/prometheus/prometheus.yml"]
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
+    ports:
+      - "9090:9090"
     networks:
       - app-network
 
@@ -94,6 +110,7 @@ services:
     depends_on:
       - tempo
       - loki
+      - prometheus
     networks:
       - app-network
     healthcheck:
@@ -105,6 +122,7 @@ services:
 volumes:
   postgres-data:
   loki-data:
+  prometheus-data:
 
 networks:
   app-network:
