--- a/otel-collector/otel-collector-config.yaml
+++ b/otel-collector/otel-collector-config.yaml
@@ -15,6 +15,9 @@ exporters:
     endpoint: "http://loki:3100/otlp"
     tls:
       insecure: true
+  prometheus:
+    endpoint: "0.0.0.0:8889"
+    namespace: "user_service"
 
 processors:
   batch:
@@ -31,3 +34,7 @@ service:
       receivers: [otlp]
       processors: [batch]
       exporters: [otlphttp/loki]
+    metrics:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [prometheus]
